convert to publisher